# CDC_Set_Up_Control_Programm

./: .gitignore  CMakeLists.txt  README.md
deploy/macos/: deploy_macos.sh
deploy/package/: qt.conf
deploy/windows/: deploy_windows.bat
docs/developer/: architecture.md  build_guide.md
docs/user_manual/: installation.md  user_guide.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/include/: application.h  application_controller.h
src/app/src/: application.cpp  application_controller.cpp
src/core/: CMakeLists.txt
src/core/include/: calibration_engine.h  data_recorder.h  motor_controller.h  safety_manager.h  sensor_manager.h
src/core/src/: calibration_engine.cpp  data_recorder.cpp  motor_controller.cpp  safety_manager.cpp  sensor_manager.cpp
src/data/: CMakeLists.txt
src/data/include/: csv_analyzer.h  data_processor.h  export_manager.h  file_manager.h
src/data/src/: csv_analyzer.cpp  data_processor.cpp  export_manager.cpp  file_manager.cpp
src/hardware/: CMakeLists.txt
src/hardware/include/: command_protocol.h  motor_interface.h  sensor_interface.h  serial_interface.h
src/hardware/src/: command_protocol.cpp  motor_interface.cpp  sensor_interface.cpp  serial_interface.cpp
src/models/: CmakeLists.txt
src/models/include/: data_statistics.h  device_info.h  measurement_data.h  motor_status.h  physics_calculator.h  physics_constants.h  qt_serial_interface.h  sensor_data.h  system_config.h
src/models/src/: data_statistics.cpp  device_info.cpp  measurement_data.cpp  physics_calculator.cpp  qt_serial_interface.cpp  sensor_data.cpp  system_config.cpp
src/utils/: CMakeLists.txt
src/utils/include/: config_manager.h  logger.h  math_utils.h  statistics_utils.h  string_utils.h  time_utils.h
src/utils/src/: config_manager.cpp  logger.cpp  math_utils.cpp  statistics_utils.cpp  string_utils.cpp  time_utils.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/core_tests/: test_calibration_engine.cpp  test_data_recorder.cpp  test_motor_controller.cpp  test_safety_manager.cpp  test_sensor_manager.cpp
tests/data_tests/: test_csv_analyzer.cpp  test_data_processor.cpp  test_export_manager.cpp  test_file_manager.cpp
tests/hardware_tests/: test_command_protocol.cpp  test_motor_interface.cpp  test_sensor_interface.cpp  test_serial_interface.cpp
tests/models_tests/: test_device_info.cpp  test_measurement_data.cpp  test_sensor_data.cpp  test_system_config.cpp
tests/utils_tests/: test_config_manager.cpp  test_logger.cpp  test_math_utils.cpp
ui/: CMakeLists.txt
ui/forms/: adddevicedialog.ui  confirmdialog.ui  errordialog.ui  mainwindow.ui  manualcalibrationdialog.ui
ui/include/: adddevicedialog.h  chart_3d_widget.h  chart_display_widget.h  confirmdialog.h  data_visualization_widget.h  errordialog.h  mainwindow.h
ui/src/: adddevicedialog.cpp  chart_3d_widget.cpp  chart_display_widget.cpp  confirmdialog.cpp  data_visualization_widget.cpp  errordialog.cpp  mainwindow.cpp
